# ROB498-SkyNet

./: .gitignore  README.md  realsense_test.py
mary_ws/src/mary_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mary_ws/src/mary_bringup/config/: mary_params.yaml
mary_ws/src/mary_bringup/launch/: mary_full.launch.py
mary_ws/src/mary_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mary_ws/src/mary_control/mary_control/: __init__.py  altitude_controller_node.py  comm_node.py  follower_node.py  mission_manager_node.py
mary_ws/src/mary_hardware/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mary_ws/src/mary_hardware/config/: px4_config.yaml  px4_pluginlists.yaml
mary_ws/src/mary_hardware/launch/: mavros.launch.py  sensors.launch.py
mary_ws/src/mary_hardware/mary_hardware/: __init__.py
mary_ws/src/mary_msgs/: CMakeLists.txt  package.xml
mary_ws/src/mary_msgs/msg/: MissionStatus.msg  PersonDetection.msg  TrackingStatus.msg
mary_ws/src/mary_msgs/srv/: SetTarget.srv  SwitchPerson.srv
mary_ws/src/mary_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mary_ws/src/mary_perception/mary_perception/: __init__.py  person_tracker_node.py  t265_pose_node.py  tof_processor_node.py
scripts/: pyrealsense.py  realsense_test.py  vpi_stereo.cpp
