<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mary_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for MARY drone system</description>
  <maintainer email="your.email@mail.utoronto.ca">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>mary_perception</exec_depend>
  <exec_depend>mary_control</exec_depend>
  <exec_depend>mary_hardware</exec_depend>
  <exec_depend>mary_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
